# HuesOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  safety-budget.json  x86_64-huesos.json
.cargo/: config.toml
.github/workflows/: hardening.yml  sanitizers.yml
crates/hues-async/: Cargo.toml
crates/hues-async/src/: lib.rs
crates/huesos-abi/: Cargo.toml
crates/huesos-abi/src/: acpi_archive.rs  acpi_broker.rs  broker_policy.rs  gas.rs  lib.rs
crates/huesos-alloc/: Cargo.toml
crates/huesos-alloc/src/: lib.rs
crates/huesos-arch/: Cargo.toml
crates/huesos-arch/src/: lib.rs  sync.rs
crates/huesos-arch/src/x86_64/: acpi.rs  ap_boot.rs  ap_trampoline.S  context_switch.rs  cpu.rs  cpu_local.rs  fault.rs  gdt.rs  idt.rs  interrupts.rs  ioapic.rs  irq_callback.rs  keyboard.rs  lapic.rs  mod.rs  paging.rs  pit.rs  serial.rs  syscall.rs  timer_callback.rs  uaccess.S  uaccess.rs
crates/huesos-boot/: Cargo.toml
crates/huesos-boot/src/: main.rs
crates/huesos-decoder-fuzz/: Cargo.toml
crates/huesos-decoder-fuzz/src/: lib.rs
crates/huesos-elf/: Cargo.toml
crates/huesos-elf/src/: lib.rs
crates/huesos-extable/: Cargo.toml
crates/huesos-extable/src/: lib.rs
crates/huesos-fat/: Cargo.toml
crates/huesos-fat/src/: lib.rs
crates/huesos-fb/: Cargo.toml
crates/huesos-fb/src/: font8x8.rs  lib.rs
crates/huesos-hal/: Cargo.toml
crates/huesos-hal/src/: lib.rs
crates/huesos-handlemove/: Cargo.toml
crates/huesos-handlemove/src/: lib.rs
crates/huesos-ioapic/: Cargo.toml
crates/huesos-ioapic/src/: lib.rs
crates/huesos-kernel/: Cargo.toml  build.rs
crates/huesos-kernel/src/: init.rs  lib.rs  panic.rs  process.rs  scheduler.rs  shutdown.rs  smp.rs  task.rs
crates/huesos-kernel/src/boot/: acpi_archive.rs  acpi_policy.rs  hbi.rs  mod.rs  platform.rs
crates/huesos-kernel/src/mem/: alloc.rs  mod.rs
crates/huesos-kernel/src/scheduler/: wavl.rs
crates/huesos-lifecycle/: Cargo.toml
crates/huesos-lifecycle/src/: lib.rs
crates/huesos-nvme/: Cargo.toml
crates/huesos-nvme/src/: async_controller.rs  block.rs  cmd.rs  controller.rs  device.rs  lib.rs  prp.rs  regs.rs  transport.rs
crates/huesos-object/: Cargo.toml
crates/huesos-object/src/: acpi_broker.rs  channel.rs  handle.rs  interrupt.rs  job.rs  koid.rs  lib.rs  object.rs  port.rs  process.rs  registry.rs  supervision.rs  thread.rs  vmar.rs  vmo.rs  wait.rs
crates/huesos-pci/: Cargo.toml
crates/huesos-pci/src/: lib.rs
crates/huesos-pmm/: Cargo.toml
crates/huesos-pmm/src/: lib.rs
crates/huesos-proclife/: Cargo.toml
crates/huesos-proclife/src/: lib.rs
crates/huesos-quota/: Cargo.toml
crates/huesos-quota/src/: lib.rs
crates/huesos-sync/: Cargo.toml
crates/huesos-sync/src/: lib.rs
crates/huesos-syscalls/: Cargo.toml
crates/huesos-syscalls/src/: acpi_broker.rs  callbacks.rs  channel.rs  debug.rs  framebuffer.rs  handle.rs  lib.rs  port_interrupt.rs  process.rs  system.rs  user_memory.rs  util.rs  vmo.rs
crates/huesos-uacpi/: Cargo.toml  build.rs
crates/huesos-uacpi/src/: lib.rs
crates/huesos-user-alloc/: Cargo.toml
crates/huesos-user-alloc/src/: lib.rs
crates/huesos-userspace/: user_linker.ld  x86_64-huesos-userspace.json
crates/huesos-userspace/acpi-manager/: Cargo.toml
crates/huesos-userspace/acpi-manager/src/: main.rs
crates/huesos-userspace/doom/: Cargo.toml  build.rs
crates/huesos-userspace/doom/c/: hues_libc.c
crates/huesos-userspace/doom/c/include/: assert.h  ctype.h  errno.h  fcntl.h  math.h  stdio.h  stdlib.h  string.h  strings.h  unistd.h
crates/huesos-userspace/doom/c/include/sys/: stat.h  types.h
crates/huesos-userspace/doom/src/: main.rs
crates/huesos-userspace/driver-host-input/: Cargo.toml
crates/huesos-userspace/driver-host-input/.cargo/: config.toml
crates/huesos-userspace/driver-host-input/src/: main.rs
crates/huesos-userspace/driver-manager/: Cargo.toml
crates/huesos-userspace/driver-manager/src/: bootfs.rs  fs_service.rs  main.rs  manifest.rs  protocol.rs  registry.rs  supervisor.rs
crates/huesos-userspace/fault-probe/: Cargo.toml
crates/huesos-userspace/fault-probe/src/: main.rs
crates/huesos-userspace/init/: Cargo.toml
crates/huesos-userspace/init/src/: log.rs  main.rs
crates/huesos-userspace/libcanvas/: Cargo.toml
crates/huesos-userspace/libcanvas/src/: acpi_broker.rs  channel.rs  debug.rs  diagnostics.rs  font8x8.rs  framebuffer.rs  handle.rs  interrupt.rs  lib.rs  port.rs  process.rs  raw.rs  system.rs  vmo.rs
crates/huesos-userspace/libcanvas/src/process/: elf.rs  launcher.rs  lifecycle.rs  objects.rs
crates/huesos-userspace/terminal/: Cargo.toml
crates/huesos-userspace/terminal/src/: ast.rs  commands.rs  keyboard.rs  lexer.rs  main.rs  parser.rs  screen.rs  shell.rs  snake.rs
crates/huesos-waitset/: Cargo.toml
crates/huesos-waitset/src/: lib.rs
docs/: ACPI_RING3.md  ALLOCATOR_HARDENING.md  ARCHITECTURE.md  ASYNC_RUNTIME.md  BOOTFS.md  BOOTFS_DOOM.md  BUILD.md  DIRTY_RENDERING.md  DOOM.md  DYNAMIC_PROCESSES.md  FAULTS_AND_PANIC.md  HANDLE_TRANSFER.md  HARDWARE.md  IOAPIC_ROUTING.md  LOCK_ORDER.md  MEMORY_PROTECTION.md  MICROKERNEL_MIGRATION.md  MODULARITY.md  MULTI_OBJECT_WAIT.md  NVME.md  NVME_KERNEL_PLUMBING.md  OBJECT_LIFECYCLE.md  OBJECT_LIFECYCLE_POLICY.md  OPTIMIZATION_SAFETY_PROGRAM.md  PANIC_FREE_PROCESS_LAUNCH.md  QUOTAS.md  RECOVERABLE_COPIES.md  ROADMAP.md  SHUTDOWN.md  SMP.md  SNAKE.md  TASK_GENERATIONS.md  TERMINAL_RENDERING.md  TESTING.md  TTY_FONT.md  UACPI.md  UNSAFE_AUDIT.md  USERSPACE.md  USER_MEMORY.md  VMAR_TRANSACTIONS.md
scripts/: ci-qemu-smoke.sh  clippy.sh  limine.conf  linker.ld  mkhbi.sh  mkiso.sh  run.sh
tools/: audit-safety.py  check-lock-policy.py  check-policy-crates.py  check-safety-budget.py
tools/alloc-tests/: Cargo.toml
tools/alloc-tests/src/: lib.rs
tools/fontgen/: README.md  generate_font.py
tools/hbi-gen/: Cargo.toml
tools/hbi-gen/src/: main.rs
