[package]
name = "huesos-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
huesos-arch = { path = "../huesos-arch" }
huesos-hal = { path = "../huesos-hal" }
huesos-object = { path = "../huesos-object" }
huesos-syscalls = { path = "../huesos-syscalls" }
huesos-pmm = { path = "../huesos-pmm" }
huesos-elf = { path = "../huesos-elf" }
huesos-fb = { path = "../huesos-fb" }
huesos-abi = { path = "../huesos-abi" }
spin = { workspace = true }
log = { workspace = true }
linked_list_allocator = { workspace = true }
x86_64 = { workspace = true }
