[package]
name = "huesos-syscalls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
huesos-object = { path = "../huesos-object" }
huesos-quota = { path = "../huesos-quota" }
huesos-arch = { path = "../huesos-arch" }
huesos-abi = { path = "../huesos-abi" }
huesos-fb = { path = "../huesos-fb" }
bitflags = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
x86_64 = { workspace = true }
