[package]
name = "huesos-doom"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
build = "build.rs"

[[bin]]
name = "huesos-doom"
path = "src/main.rs"

[dependencies]
libcanvas = { path = "../libcanvas" }
huesos-abi = { path = "../../huesos-abi" }

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 2
panic = "abort"
lto = false

[profile.dev]
panic = "abort"

[workspace]
