[package]
name = "huesos-driver-host-input"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "huesos-driver-host-input"
path = "src/main.rs"

[dependencies]
libcanvas = { path = "../libcanvas" }

[profile.release]
opt-level = 1
panic = "abort"
lto = false

[profile.dev]
panic = "abort"

[workspace]
