[package]
name = "huesos-terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "huesos-terminal"
path = "src/main.rs"

[dependencies]
libcanvas = { path = "../libcanvas" }
logos = { version = "0.16.1", default-features = false, features = ["export_derive"] }

[profile.release]
opt-level = 1
panic = "abort"
lto = false

[profile.dev]
panic = "abort"

[workspace]
